# ml-algorithms-playground

./: .gitignore  LICENSE  README.md  docker-compose.yaml  requirements.txt
backend/: Dockerfile  db.sqlite3  entrypoint.sh  manage.py  pytest.ini  requirements.txt
backend/backend/: settings.py  urls.py
backend/ml_api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/tests/: conftest.py  test_algorithm_variants.py  test_algorithms.py  test_auth_tokens.py  test_datasets.py  test_experiment_creation.py  test_experiment_detail.py  test_experiments_list.py  test_smoke.py
frontend/: Dockerfile  eslint.config.js  package-lock.json  package.json  vite.config.js
ml_core/: demo.py  pyproject.toml  pytest.ini  runner.py
ml_core/algorithms/: algorithm_registry.py  catalog.py  classical.py  hparam_specs.py  ml_models.py  registry.py
ml_core/algorithms/classical_algorithms/: definitions.py  random_forest.py  regression.py  svm.py  xgboost.py
ml_core/algorithms/deep/: definitions.py  mlp.py  mlp_adapter.py
ml_core/common/: hyperparameters.py  types.py
ml_core/data_handlers/: load_dataset.py  metadata.py
ml_core/evaluation/: metrics.py
ml_core/ml_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ml_core/tests/: test_hyperparameters_registry.py  test_hyperparameters_validation.py  test_mlp_variants.py  test_regression_variant.py  test_regression_variants.py  test_rf_variant.py  test_rf_variants.py  test_runner_contract.py  test_smoke.py  test_svm_variants.py  test_task_family.py  test_xgboost_variant.py  test_xgboost_variants.py
(+64 files in other folders)
