[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-core"
version = "0.1.0"
description = "Core ML engine for ML Algorithms Playground."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Maciej Stranz" }]
dependencies = [
  "numpy",
  "scikit-learn",
  "xgboost",
  "torch",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ml_core*"]
